refactor: define style with best practice

--- a/developer-assist-dashboard/env/.env.local
+++ b/developer-assist-dashboard/env/.env.local
@@ -18,6 +18,10 @@ AAD_APP_ACCESS_AS_USER_PERMISSION_ID=
 TEAMS_APP_PACKAGE_PATH=
 M365_TITLE_ID=
 M365_APP_ID=
+FUNC_NAME=
+FUNC_ENDPOINT=
+FUNC_PATH=
+DOTNET_PATH=
 
 # Generated during deploy, you can also add your own variables.
 SSL_CRT_FILE=
