--- a/developer-assist-dashboard/env/.env.dev
+++ b/developer-assist-dashboard/env/.env.dev
@@ -21,3 +21,9 @@ TAB_AZURE_STORAGE_RESOURCE_ID=
 TAB_ENDPOINT=
 M365_TITLE_ID=
 M365_APP_ID=
+TEAMS_APP_TENANT_ID=
+TAB_DOMAIN=
+API_FUNCTION_ENDPOINT=
+API_FUNCTION_RESOURCE_ID=
+TEAMS_APP_UPDATE_TIME=
+DOTNET_PATH=
