--- a/developer-assist-dashboard/teamsapp.local.yml
+++ b/developer-assist-dashboard/teamsapp.local.yml
@@ -131,6 +131,8 @@ deploy:
         DEVOPS_PROJECT_NAME: ${{DEVOPS_PROJECT_NAME}}
         GITHUB_REPO_NAME: ${{GITHUB_REPO_NAME}}
         GITHUB_REPO_OWNER: ${{GITHUB_REPO_OWNER}}
+        PlANNER_GROUP_ID: ${{PLANNER_GROUP_ID}}
+        PLANNER_PLAN_ID: ${{PLANNER_PLAN_ID}}
   
   # Generate runtime environment variables for backend
   - uses: file/createOrUpdateEnvironmentFile
@@ -150,5 +152,6 @@ deploy:
         GITHUB_REPO_OWNER: ${{GITHUB_REPO_OWNER}}
         PlANNER_GROUP_ID: ${{PLANNER_GROUP_ID}}
         PLANNER_PLAN_ID: ${{PLANNER_PLAN_ID}}
+        PLANNER_BUCKET_ID: ${{PLANNER_BUCKET_ID}}
         ALLOWED_APP_IDS: 1fec8e78-bce4-4aaf-ab1b-5451cc387264;5e3ce6c0-2b1f-4285-8d4b-75ee78787346;0ec893e0-5785-4de6-99da-4ed124e5296c;4345a7b9-9a63-4910-a426-35363201d503;4765445b-32c6-49b0-83e6-1d93765276ca;d3590ed6-52b3-4102-aeff-aad2292ab01c;00000002-0000-0ff1-ce00-000000000000;bc59ab01-8403-45c6-8796-ac3ef710b3e3
 
