--- a/live-share-dice-roller/teamsapp.yml
+++ b/live-share-dice-roller/teamsapp.yml
@@ -84,3 +84,4 @@ publish:
     writeToEnvironmentFile:
       # Write the information of created resources into environment file for the specified environment variable(s).
       publishedAppId: TEAMS_APP_PUBLISHED_APP_ID
+projectId: 985b3043-34b3-46b0-86dd-cb89afe24064
