--- a/live-share-dice-roller/package.json
+++ b/live-share-dice-roller/package.json
@@ -2,6 +2,7 @@
     "name": "dice-roller",
     "version": "1.0.0",
     "description": "Sample dice roller app.",
+    "repository": "https://github.com/microsoft/live-share-sdk",
     "license": "Microsoft",
     "author": "Microsoft",
     "scripts": {
@@ -9,22 +10,23 @@
         "clean": "npx shx rm -rf dist",
         "start:client": "vite",
         "start:https": "vite src --config vite.https-config.js",
-        "start:server": "npx @fluidframework/azure-local-service@latest",
+        "start:server": "npx tinylicious@latest",
+        "start-https": "start-server-and-test start:server 7070 start:https",
         "start": "start-server-and-test start:server 7070 start:client",
         "doctor": "eslint src/**/*.{j,t}s{,x} --fix --no-error-on-unmatched-pattern"
     },
     "dependencies": {
-        "@microsoft/live-share": "~1.0.0-preview.10",
-        "@microsoft/teams-js": "^2.5.0",
+        "@fluidframework/azure-client": "~1.0.3",
+        "@microsoft/live-share": "^1.0.0-preview.12",
+        "@microsoft/teams-js": "^2.11.0",
         "@typescript-eslint/eslint-plugin": "^5.48.1",
         "@typescript-eslint/parser": "^5.48.1",
-        "fluid-framework": "~1.2.3",
-        "vite": "^4.2.1"
+        "fluid-framework": "^1.3.6"
     },
     "devDependencies": {
-        "@fluidframework/test-client-utils": "~1.2.3",
+        "@fluidframework/test-client-utils": "^1.3.6",
         "buffer": "^6.0.3",
-        "env-cmd": "^10.1.0",
-        "start-server-and-test": "^1.15.2"
+        "start-server-and-test": "^1.15.2",
+        "vite": "^4.0.4"
     }
 }
