--- a/developer-assist-dashboard/teamsapp.yml
+++ b/developer-assist-dashboard/teamsapp.yml
@@ -9,7 +9,8 @@ provision:
       name: dev-assist-dashboard-aad # Note: when you run aadApp/update, the AAD app name will be updated based on the definition in manifest. If you don't want to change the name, make sure the name in AAD manifest is the same with the name defined here.
       generateClientSecret: true # If the value is false, the action will not generate client secret for you
       signInAudience: "AzureADMyOrg" # Authenticate users with a Microsoft work or school account in your organization's Azure AD tenant (for example, single tenant).
-    writeToEnvironmentFile: # Write the information of created resources into environment file for the specified environment variable(s).
+    writeToEnvironmentFile:
+      # Write the information of created resources into environment file for the specified environment variable(s).
       clientId: AAD_APP_CLIENT_ID
       clientSecret: SECRET_AAD_APP_CLIENT_SECRET # Environment variable that starts with `SECRET_` will be stored to the .env.{envName}.user environment file
       objectId: AAD_APP_OBJECT_ID
@@ -85,6 +86,15 @@ provision:
       appId: M365_APP_ID
 
 deploy:
+  # Install development tool(s)
+  - uses: devTool/install
+    with:      
+      dotnet: true
+    # Write the information of installed development tool(s) into environment
+    # file for the specified environment variable(s).
+    writeToEnvironmentFile:
+      dotnetPath: DOTNET_PATH
+      
   # Run npm command
   - uses: cli/runNpmCommand
     with:
@@ -95,6 +105,8 @@ deploy:
       TEAMS_APP_ID: ${{TEAMS_APP_ID}}
       REACT_APP_CLIENT_ID: ${{AAD_APP_CLIENT_ID}}
       REACT_APP_START_LOGIN_PAGE_URL: ${{TAB_ENDPOINT}}/auth-start.html
+      REACT_APP_FUNC_NAME: callService
+      REACT_APP_FUNC_ENDPOINT: ${{API_FUNCTION_ENDPOINT}}
     with:
       args: run build --if-present
   # Deploy bits to Azure Storage Static Website
@@ -107,6 +119,33 @@ deploy:
       # You can replace it with your existing Azure Resource id
       # or add it to your environment variable file.
       resourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}}
+
+  # Run npm command
+  - uses: cli/runNpmCommand
+    with:
+      workingDirectory: api
+      args: install
+  # Run npm command
+  - uses: cli/runNpmCommand
+    with:
+      workingDirectory: api
+      args: run build --if-present
+  - uses: cli/runDotnetCommand
+    with:
+      workingDirectory: api
+      args: build extensions.csproj -o bin --ignore-failed-sources
+      execPath: ${{DOTNET_PATH}}
+  # Deploy your application to Azure Functions using the zip deploy feature.
+  # For additional details, see at https://aka.ms/zip-deploy-to-azure-functions
+  - uses: azureFunctions/zipDeploy
+    with:
+      workingDirectory: api
+      # deploy base folder
+      artifactFolder: .
+      # Ignore file location, leave blank will ignore nothing
+      ignoreFile: .funcignore
+      # the resource id of the cloud resource to be deployed to
+      resourceId: ${{API_FUNCTION_RESOURCE_ID}}
 
 publish:
   # Validate using manifest schema
