--- a/developer-assist-dashboard/package.json
+++ b/developer-assist-dashboard/package.json
@@ -11,7 +11,7 @@
     "@microsoft/microsoft-graph-client": "^3.0.5",
     "@microsoft/teams-js": "^2.7.1",
     "@microsoft/teamsfx": "^2.2.0",
-    "@microsoft/teamsfx-react": "^3.0.0-beta",
+    "@microsoft/teamsfx-react": "^3.0.0",
     "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
