--- a/graph-toolkit-one-productivity-hub/package.json
+++ b/graph-toolkit-one-productivity-hub/package.json
@@ -13,7 +13,7 @@
     "@microsoft/mgt-teamsfx-provider": "^2.8.0",
     "@microsoft/teams-js": "^2.7.1",
     "@microsoft/teamsfx": "^2.2.0",
-    "@microsoft/teamsfx-react": "^3.0.0-beta",
+    "@microsoft/teamsfx-react": "^3.0.0",
     "axios": "^0.21.1",
     "nth-check": "^2.0.1",
     "react": "^18.2.0",
