--- a/team-central-dashboard/package.json
+++ b/team-central-dashboard/package.json
@@ -13,7 +13,7 @@
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@microsoft/teams-js": "^2.7.1",
     "@microsoft/teamsfx": "^2.2.0",
-    "@microsoft/teamsfx-react": "^3.0.0-beta",
+    "@microsoft/teamsfx-react": "^3.0.0",
     "axios": "^0.21.1",
     "moment-timezone": "^0.5.39",
     "react": "^18.2.0",
