fix: change app packages path and remove 'groupChat'

--- a/hello-world-teams-tab-and-outlook-add-in/appPackage/manifest.json
+++ b/hello-world-teams-tab-and-outlook-add-in/appPackage/manifest.json
@@ -30,8 +30,7 @@
             "configurationUrl": "${{TAB_ENDPOINT}}/index.html#/config",
             "canUpdateConfiguration": true,
             "scopes": [
-                "team",
-                "groupChat"
+                "team"
             ]
         }
     ],
