--- a/hello-world-teams-tab-and-outlook-add-in/appPackage/manifest.json
+++ b/hello-world-teams-tab-and-outlook-add-in/appPackage/manifest.json
@@ -30,7 +30,8 @@
             "configurationUrl": "${{TAB_ENDPOINT}}/index.html#/config",
             "canUpdateConfiguration": true,
             "scopes": [
-                "team"
+                "team",
+                "groupchat"
             ]
         }
     ],
