chore: update description

--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -238,7 +238,7 @@
         {
             "id": "teams-chef-bot",
             "title": "Teams Chef Bot",
-            "shortDescription": "Demonstrates how to build bot with GPT.",
+            "shortDescription": "Demonstrates how to build bot with Microsoft Teams AI Library.",
             "fullDescription": "This is a conversational bot for Microsoft Teams that impersonates a Chef to help you you cook Teams apps.",
             "tags": [
                 "Bot",
