fix: loading indicator conflicts with mobile development

--- a/hello-world-bot-with-tab/appPackage/manifest.json
+++ b/hello-world-bot-with-tab/appPackage/manifest.json
@@ -84,5 +84,5 @@
         "${{TAB_DOMAIN}}",
         "${{BOT_DOMAIN}}"
     ],
-    "showLoadingIndicator": true
+    "showLoadingIndicator": false
 }
