--- a/bot-sso/.webappignore
+++ b/bot-sso/.webappignore
@@ -13,9 +13,8 @@ local.settings.json
 test
 tsconfig.json
 .DS_Store
-node_modules/.bin
-node_modules/ts-node
-node_modules/typescript
-appPackage/
-infra/
-teamsfx/
+/node_modules/.bin
+/node_modules/ts-node
+/node_modules/typescript
+/appPackage/
+/infra/
