chore: use stable version TTK in codespaces devcontainer

--- a/.devcontainer/hello-world-tab-codespaces/devcontainer.json
+++ b/.devcontainer/hello-world-tab-codespaces/devcontainer.json
@@ -23,7 +23,7 @@
         "extensions.autoCheckUpdates": false
       },
       "extensions": [
-        "TeamsDevApp.ms-teams-vscode-extension@prerelease"
+        "TeamsDevApp.ms-teams-vscode-extension"
       ]
     }
   },
