--- a/.devcontainer/notification-codespaces/devcontainer.json
+++ b/.devcontainer/notification-codespaces/devcontainer.json
@@ -24,7 +24,7 @@
         "extensions.autoCheckUpdates": false
       },
       "extensions": [
-        "TeamsDevApp.ms-teams-vscode-extension@prerelease"
+        "TeamsDevApp.ms-teams-vscode-extension"
       ]
     }
   },
