--- a/todo-list-with-Azure-backend/package.json
+++ b/todo-list-with-Azure-backend/package.json
@@ -7,10 +7,17 @@
         "node": "16 || 18"
     },
     "scripts": {
+        "dev:teamsfx": "concurrently \"npm run start:tabs\" \"npm run start:api\"",
+        "start:api": "cd api && npm run dev:teamsfx",
+        "start:tabs": "cd tabs && npm run dev:teamsfx",
+        "install:api": "cd api && npm install",
+        "install:tabs": "cd tabs && npm install",
+        "install": "concurrently \"npm run install:api\" \"npm run install:tabs\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
-        "@microsoft/teamsfx-cli": "1.*"
+        "@microsoft/teamsfx-cli": "1.*",
+        "concurrently": "^7.6.0"
     },
     "license": "MIT"
 }
