added welcome message in notification bot

--- a/notification-codespaces/env/.env.local
+++ b/notification-codespaces/env/.env.local
@@ -4,7 +4,8 @@
 TEAMSFX_ENV=local
 
 # Generated during provision, you can also add your own variables.
-BOT_ID=
-TEAMS_APP_ID=
+BOT_ID=2bfba1fb-22b9-43fb-b6ed-3bd7b551fbf7
+TEAMS_APP_ID=7b175921-52a2-4b2c-8345-f4a9544a79a5
 BOT_DOMAIN=
 BOT_ENDPOINT=
+TEAMS_APP_TENANT_ID=7780052e-b360-4a9e-98d9-bc48067a4f9d
