--- a/developer-assist-dashboard/appPackage/manifest.json
+++ b/developer-assist-dashboard/appPackage/manifest.json
@@ -25,16 +25,7 @@
     "accentColor": "#FFFFFF",
     "bots": [],
     "composeExtensions": [],
-    "configurableTabs": [
-        {
-            "configurationUrl": "${{TAB_ENDPOINT}}/index.html#/config",
-            "canUpdateConfiguration": true,
-            "scopes": [
-                "team",
-                "groupchat"
-            ]
-        }
-    ],
+    "configurableTabs": [],
     "staticTabs": [
         {
             "entityId": "index0",
@@ -42,7 +33,9 @@
             "contentUrl": "${{TAB_ENDPOINT}}/index.html#/tab",
             "websiteUrl": "${{TAB_ENDPOINT}}/index.html#/tab",
             "scopes": [
-                "personal"
+                "personal",
+                "groupChat",
+                "team"
             ]
         }
     ],
