--- a/hello-world-bot-with-tab/teamsapp.local.yml
+++ b/hello-world-bot-with-tab/teamsapp.local.yml
@@ -40,7 +40,7 @@ provision:
 
   - uses: script # Set TAB_DOMAIN and TAB_ENDPOINT for local launch
     with:
-      run: echo "::set-teamsfx-env TAB_DOMAIN=localhost:53000";
+      run: echo "::set-teamsfx-env TAB_DOMAIN=localhost";
         echo "::set-teamsfx-env TAB_ENDPOINT=https://localhost:53000";
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
