--- a/hello-world-in-meeting/appPackage/manifest.json
+++ b/hello-world-in-meeting/appPackage/manifest.json
@@ -25,13 +25,16 @@
     "accentColor": "#FFFFFF",
     "bots": [],
     "composeExtensions": [],
-    "configurableTabs": [
+    "configurableTabs": [],
+    "staticTabs": [
         {
-            "configurationUrl": "${{TAB_ENDPOINT}}/index.html#/config",
-            "canUpdateConfiguration": true,
+            "entityId": "index",
+            "name": "Home",
+            "contentUrl": "${{TAB_ENDPOINT}}/index.html#/tab",
+            "websiteUrl": "${{TAB_ENDPOINT}}/index.html#/tab",
             "scopes": [
                 "team",
-                "groupchat"
+                "groupChat"
               ],
               "context": [
                 "channelTab",
@@ -39,10 +42,9 @@
                 "meetingChatTab",
                 "meetingDetailsTab",
                 "meetingSidePanel"
-              ]
+            ]
         }
     ],
-    "staticTabs": [],
     "permissions": [
         "identity",
         "messageTeamMembers"
