ci: update code owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -35,4 +35,6 @@
 /todo-list-with-Azure-backend @adashen @formulahendry
 /todo-list-with-Azure-backend-M365 @kimizhu @swatDong @kuojianlu
 /developer-assist-dashboard @eriolchan @huimiu @hund030 @JerryYangKai
+/whos-next-meeting-app @MSFT-yiz @HuihuiWu-Microsoft
+/teams-chef-bot @MSFT-yiz @HuihuiWu-Microsoft
 /.github/workflows/cd.yml @adashen @LongOddCode @Siglud @qinezh @wenytang-ms
