ci: update codeowner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -22,7 +22,7 @@
 /hello-world-bot-with-tab @eriolchan @hund030
 /hello-world-in-meeting @eriolchan @JerryYangKai
 /hello-world-tab-codespaces @kimizhu @dooriya @qinezh
-/hello-world-tab-with-backend @eriolchan @hund030
+/hello-world-tab-with-backend @adashen @SLdragon @KennethBWSong
 /hello-world-teams-tab-and-outlook-add-in @MSFT-yiz @1yefuwang1 @HuihuiWu-Microsoft
 /incoming-webhook-notification @kimizhu @dooriya @swatDong @XiaofuHuang
 /notification-codespaces @kimizhu @dooriya @qinezh
