--- a/hello-world-in-meeting/appPackage/manifest.json
+++ b/hello-world-in-meeting/appPackage/manifest.json
@@ -34,6 +34,8 @@
                 "groupchat"
               ],
               "context": [
+                "channelTab",
+                "privateChatTab",
                 "meetingChatTab",
                 "meetingDetailsTab",
                 "meetingSidePanel"
