ci: add code owner for online sample config

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -37,4 +37,5 @@
 /developer-assist-dashboard @eriolchan @huimiu @hund030 @JerryYangKai
 /whos-next-meeting-app @MSFT-yiz @HuihuiWu-Microsoft
 /teams-chef-bot @MSFT-yiz @HuihuiWu-Microsoft
+/.config/samples-config-v3.json @HuihuiWu-Microsoft @wenytang-ms @tecton
 /.github/workflows/cd.yml @adashen @LongOddCode @Siglud @qinezh @wenytang-ms
