--- a/NPM-search-connector-M365/teamsapp.yml
+++ b/NPM-search-connector-M365/teamsapp.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.1.1/yaml.schema.json
 version: 1.1.1
-sampleTag: TeamsFx-Samples:npm-search-connector
+sampleTag: TeamsFx-Samples:npm-search-connector-M365
 
 environmentFolderPath: ./env
 
