--- a/live-share-dice-roller/teamsapp.local.yml
+++ b/live-share-dice-roller/teamsapp.local.yml
@@ -1,5 +1,6 @@
-# yaml-language-server: $schema=https://developer.microsoft.com/json-schemas/teams-toolkit/teamsapp-yaml/1.0.0/yaml.schema.json
-version: 1.0.0
+# yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.1.1/yaml.schema.json
+version: 1.1.1
+sampleTag: TeamsFx-Samples:live-share-dice-roller
 
 environmentFolderPath: ./env
 
