--- a/spfx-productivity-dashboard/env/.env.local
+++ b/spfx-productivity-dashboard/env/.env.local
@@ -1,5 +1,5 @@
 # Built-in environment variables
-TEAMSFX_ENV=dev
+TEAMSFX_ENV=local
 
 # Generated during provision, you can also add your own variables.
 TEAMS_APP_ID=
