chore: add graph toolkit tag for one productivity hub sample

--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -279,7 +279,8 @@
             "tags": [
                 "Tab",
                 "JS",
-                "SSO"
+                "SSO",
+                "Graph Toolkit"
             ],
             "time": "5min to run",
             "configuration": "Ready for debug",
