--- a/spfx-productivity-dashboard/teamsapp.yml
+++ b/spfx-productivity-dashboard/teamsapp.yml
@@ -1,9 +1,10 @@
 # yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.1.1/yaml.schema.json
 version: 1.1.1
-sampleTag: TeamsFx-Samples:todo-list-SPFx
+sampleTag: TeamsFx-Samples:spfx-productivity-dashboard
 
 environmentFolderPath: ./env
 
+# Triggered when 'teamsfx deploy' is executed
 deploy:
   - uses: cli/runNpmCommand
     with:
@@ -22,13 +23,13 @@ deploy:
       createAppCatalogIfNotExist: false
       packageSolutionPath: ./src/config/package-solution.json
 
-
+# Triggered when 'teamsfx provision' is executed
 provision:
   # Creates a Teams app
   - uses: teamsApp/create
     with:
       # Teams app name
-      name: TodoListSPFx-${{TEAMSFX_ENV}}
+      name: spfx-productivity-dashboard-${{TEAMSFX_ENV}}
     # Write the information of created resources into environment file for
     # the specified environment variable(s).
     writeToEnvironmentFile:
@@ -56,9 +57,20 @@ provision:
   # Will use the app id in manifest file to determine which Teams app to update.
   - uses: teamsApp/update
     with:
-      # Relative path to teamsfx folder. This is the path for built zip file.
+      # Relative path to this file. This is the path for built zip file.
       appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
+  # Extend your Teams app to Outlook and the Microsoft 365 app
+  - uses: teamsApp/extendToM365
+    with:
+      # Relative path to the build app package.
+      appPackagePath: ./appPackage/build/appPackage.${{TEAMSFX_ENV}}.zip
+    # Write the information of created resources into environment file for
+    # the specified environment variable(s).
+    writeToEnvironmentFile:
+      titleId: M365_TITLE_ID
+      appId: M365_APP_ID
 
+# Triggered when 'teamsfx publish' is executed
 publish:
   # Validate using manifest schema
   - uses: teamsApp/validateManifest
