feat: add sampleTag and bump yaml version to v1.2

--- a/graph-connector-app/teamsapp.yml
+++ b/graph-connector-app/teamsapp.yml
@@ -1,6 +1,7 @@
-# yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.1.1/yaml.schema.json
-version: 1.1.1
-sampleTag: TeamsFx-Samples:graph-connector-app
+# yaml-language-server: $schema=https://aka.ms/teams-toolkit/v1.2/yaml.schema.json
+version: v1.2
+additionalMetadata:
+  sampleTag: TeamsFx-Samples:graph-connector-app
 
 environmentFolderPath: ./env
 
