--- a/NPM-search-message-extension-codespaces/teamsapp.local.yml
+++ b/NPM-search-message-extension-codespaces/teamsapp.local.yml
@@ -1,8 +1,9 @@
-# yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.1.1/yaml.schema.json
+# yaml-language-server: $schema=https://aka.ms/teams-toolkit/v1.2/yaml.schema.json
 # Visit https://aka.ms/teamsfx-v5.0-guide for details on this file
 # Visit https://aka.ms/teamsfx-actions for details on actions
-version: 1.1.1
-sampleTag: TeamsFx-Samples:npm-search-message-extension-codespaces
+version: v1.2
+additionalMetadata:
+  sampleTag: TeamsFx-Samples:npm-search-message-extension-codespaces
 
 provision:
   # Creates a Teams app
