--- a/team-central-dashboard/teamsapp.yml
+++ b/team-central-dashboard/teamsapp.yml
@@ -1,6 +1,7 @@
-# yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.1.1/yaml.schema.json
-version: 1.1.1
-sampleTag: TeamsFx-Samples:team-central-dashboard
+# yaml-language-server: $schema=https://aka.ms/teams-toolkit/v1.2/yaml.schema.json
+version: v1.2
+additionalMetadata:
+  sampleTag: TeamsFx-Samples:team-central-dashboard
 
 environmentFolderPath: ./env
 
