feat: add sampleTag and bump yaml version to v1.2 (#994)
* feat: add sampleTag and bump yaml version to v1.2

* fix: add empty lines for better layout

--- a/team-central-dashboard/teamsapp.local.yml
+++ b/team-central-dashboard/teamsapp.local.yml
@@ -1,6 +1,8 @@
-# yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.1.1/yaml.schema.json
-version: 1.1.1
-sampleTag: TeamsFx-Samples:team-central-dashboard
+# yaml-language-server: $schema=https://aka.ms/teams-toolkit/v1.2/yaml.schema.json
+version: v1.2
+
+additionalMetadata:
+  sampleTag: TeamsFx-Samples:team-central-dashboard
 
 provision:
   - uses: aadApp/create # Creates a new Azure Active Directory (AAD) app to authenticate users if the environment variable that stores clientId is empty
