--- a/basic-blazor-tab-app/BasicBlazorTabApp/teamsapp.yml
+++ b/basic-blazor-tab-app/BasicBlazorTabApp/teamsapp.yml
@@ -1,8 +1,10 @@
-# yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.1.1/yaml.schema.json
+# yaml-language-server: $schema=https://aka.ms/teams-toolkit/v1.2/yaml.schema.json
 # Visit https://aka.ms/teamsfx-v5.0-guide for details on this file
 # Visit https://aka.ms/teamsfx-actions for details on actions
-version: 1.1.1
-sampleTag: TeamsFx-Samples:basic-blazor-tab-app
+version: v1.2
+
+additionalMetadata:
+  sampleTag: TeamsFx-Samples:basic-blazor-tab-app
 
 environmentFolderPath: ./env
 
