--- a/graph-connector-bot/teamsapp.local.yml
+++ b/graph-connector-bot/teamsapp.local.yml
@@ -1,6 +1,8 @@
-# yaml-language-server: $schema=https://aka.ms/teams-toolkit/1.1.1/yaml.schema.json
-version: 1.1.1
-sampleTag: TeamsFx-Samples:graph-connector-bot
+# yaml-language-server: $schema=https://aka.ms/teams-toolkit/v1.2/yaml.schema.json
+version: v1.2
+
+additionalMetadata:
+  sampleTag: TeamsFx-Samples:graph-connector-bot
 
 provision:
   - uses: aadApp/create # Creates a new Azure Active Directory (AAD) app to authenticate users if the environment variable that stores clientId is empty
