When stopping a run and debug task all resources should be closed

--- a/live-share-dice-roller/.vscode/launch.json
+++ b/live-share-dice-roller/.vscode/launch.json
@@ -10,7 +10,8 @@
                 "group": "remote",
                 "order": 1
             },
-            "internalConsoleOptions": "neverOpen"
+            "internalConsoleOptions": "neverOpen",
+            "postDebugTask": "Terminate All Tasks"
         },
         {
             "name": "Launch Remote (Chrome)",
@@ -21,7 +22,8 @@
                 "group": "remote",
                 "order": 2
             },
-            "internalConsoleOptions": "neverOpen"
+            "internalConsoleOptions": "neverOpen",
+            "postDebugTask": "Terminate All Tasks"
         },
         {
             "name": "Attach to Frontend (Edge)",
@@ -32,7 +34,8 @@
                 "group": "all",
                 "hidden": true
             },
-            "internalConsoleOptions": "neverOpen"
+            "internalConsoleOptions": "neverOpen",
+            "postDebugTask": "Terminate All Tasks"
         },
         {
             "name": "Attach to Frontend (Chrome)",
@@ -43,7 +46,8 @@
                 "group": "all",
                 "hidden": true
             },
-            "internalConsoleOptions": "neverOpen"
+            "internalConsoleOptions": "neverOpen",
+            "postDebugTask": "Terminate All Tasks"
         }
     ],
     "compounds": [
