--- a/spfx-productivity-dashboard/src/.yo-rc.json
+++ b/spfx-productivity-dashboard/src/.yo-rc.json
@@ -5,9 +5,9 @@
     "nodeVersion": "16.17.0",
     "sdksVersions": {
       "@microsoft/microsoft-graph-client": "3.0.2",
-      "@microsoft/teams-js": "2.4.1"
+      "@microsoft/teams-js": "2.9.1"
     },
-    "version": "1.16.0-beta.2",
+    "version": "1.17.4",
     "libraryName": "spfx-productivity-dashboard",
     "libraryId": "a6240e42-f9f6-49a9-b642-b16cac87b013",
     "environment": "spo",
