--- a/spfx-productivity-dashboard/src/package.json
+++ b/spfx-productivity-dashboard/src/package.json
@@ -13,22 +13,23 @@
   },
   "dependencies": {
     "@microsoft/mgt-spfx": "^2.6.2",
-    "@microsoft/sp-core-library": "1.16.0-beta.2",
-    "@microsoft/sp-lodash-subset": "1.16.0-beta.2",
-    "@microsoft/sp-office-ui-fabric-core": "1.16.0-beta.2",
-    "@microsoft/sp-property-pane": "1.16.0-beta.2",
-    "@microsoft/sp-webpart-base": "1.16.0-beta.2",
+    "@microsoft/sp-core-library": "1.17.4",
+    "@microsoft/sp-lodash-subset": "1.17.4",
+    "@microsoft/sp-office-ui-fabric-core": "1.17.4",
+    "@microsoft/sp-property-pane": "1.17.4",
+    "@microsoft/sp-webpart-base": "1.17.4",
     "tslib": "2.3.1"
   },
   "devDependencies": {
-    "@microsoft/eslint-config-spfx": "1.16.0-beta.2",
-    "@microsoft/eslint-plugin-spfx": "1.16.0-beta.2",
-    "@microsoft/rush-stack-compiler-4.5": "0.2.2",
-    "@microsoft/sp-build-web": "1.16.0-beta.2",
-    "@microsoft/sp-module-interfaces": "1.16.0-beta.2",
+    "@microsoft/eslint-config-spfx": "1.17.4",
+    "@microsoft/eslint-plugin-spfx": "1.17.4",
+    "@microsoft/rush-stack-compiler-4.5": "0.5.0",
+    "@microsoft/sp-build-web": "1.17.4",
+    "@microsoft/sp-module-interfaces": "1.17.4",
     "@rushstack/eslint-config": "2.5.1",
     "@types/webpack-env": "~1.15.2",
     "ajv": "^6.12.5",
+    "eslint": "8.7.0",
     "gulp": "4.0.2",
     "typescript": "4.5.5"
   }
