feat: short id meaningful

--- a/.config/samples-config-v3.json
+++ b/.config/samples-config-v3.json
@@ -4,7 +4,7 @@
             "id": "hello-world-tab-with-backend",
             "onboardDate": "2021-11-30",
             "title": "Tab App with Azure Backend",
-            "shortId": "hwtb",
+            "shortId": "helloworld-backend",
             "shortDescription": "A Hello World app of Microsoft Teams Tab app which has a backend service",
             "fullDescription": "This is a Hello World app of Microsoft Teams Tab app which accomplishes very simple function like single-sign on. You can run this app locally or deploy it to Microsoft Azure. This app has a Tab frontend and a backend service using Azure Function.",
             "types": [
@@ -22,7 +22,7 @@
         },
         {
             "id": "graph-toolkit-contact-exporter",
-            "shortId": "gtce",
+            "shortId": "contact-exporter",
             "onboardDate": "2021-11-30",
             "title": "Contact Exporter using Graph Toolkit",
             "shortDescription": "Contact Exporter app of Microsoft Teams Tab app.",
@@ -41,7 +41,7 @@
         },
         {
             "id": "bot-sso",
-            "shortId": "bsso",
+            "shortId": "sso-bot",
             "onboardDate": "2021-10-19",
             "title": "Bot App with SSO Enabled",
             "shortDescription": "A Hello World app of Microsoft Teams Bot app with SSO",
@@ -62,7 +62,7 @@
         },
         {
             "id": "todo-list-SPFx",
-            "shortId": "tdls",
+            "shortId": "todo-spfx",
             "onboardDate": "2021-05-06",
             "title": "Todo List with SPFx",
             "shortDescription": "Todo List app hosting on SharePoint",
@@ -82,7 +82,7 @@
         },
         {
             "id": "hello-world-in-meeting",
-            "shortId": "hwim",
+            "shortId": "helloworld-meeting",
             "onboardDate": "2022-04-08",
             "title": "My First Meeting App",
             "shortDescription": "A template for apps using only in the context of a Teams meeting",
@@ -101,7 +101,7 @@
         },
         {
             "id": "todo-list-with-Azure-backend-M365",
-            "shortId": "tdlam",
+            "shortId": "todo-backend-m365",
             "onboardDate": "2021-11-09",
             "title": "Todo List (Works in Teams, Outlook and Office)",
             "shortDescription": "Todo List app that runs across Microsoft 365 including Teams, Outlook and Office",
@@ -123,7 +123,7 @@
         },
         {
             "id": "NPM-search-connector-M365",
-            "shortId": "nscm",
+            "shortId": "npm-search-m365",
             "onboardDate": "2021-11-09",
             "title": "NPM Search Connector",
             "shortDescription": "Search and Share an NPM Package in Teams and Outlook (Web)",
@@ -143,7 +143,7 @@
         },
         {
             "id": "bot-proactive-messaging-teamsfx",
-            "shortId": "bpmt",
+            "shortId": "proactive-messaging",
             "onboardDate": "2022-08-01",
             "title": "Proactive Messaging",
             "shortDescription": "Demonstrates how to send proactive messages to users.",
@@ -163,7 +163,7 @@
         },
         {
             "id": "adaptive-card-notification",
-            "shortId": "acn",
+            "shortId": "ac-notification",
             "onboardDate": "2022-03-28",
             "title": "Adaptive Card Notification",
             "shortDescription": "Demonstrates how to send adaptive card notification to users.",
@@ -182,7 +182,7 @@
         },
         {
             "id": "incoming-webhook-notification",
-            "shortId": "iwn",
+            "shortId": "webhook-notification",
             "onboardDate": "2022-03-31",
             "title": "Incoming Webhook Notification",
             "shortDescription": "Demonstrates how to send notification via Incoming Webhook.",
@@ -201,7 +201,7 @@
         },
         {
             "id": "stocks-update-notification-bot",
-            "shortId": "sunb",
+            "shortId": "stocks-notification",
             "onboardDate": "2022-08-08",
             "title": "Stocks Update",
             "shortDescription": "Keep up to date with the latest stock price in Microsoft Teams.",
@@ -222,7 +222,7 @@
         },
         {
             "id": "query-org-user-with-message-extension-sso",
-            "shortId": "qumes",
+            "shortId": "query-user-sso-me",
             "onboardDate": "2022-09-20",
             "title": "Org User Search Connector",
             "shortDescription": "Query Org User with Message Extension SSO",
@@ -241,7 +241,7 @@
         },
         {
             "id": "team-central-dashboard",
-            "shortId": "tcd",
+            "shortId": "central-dashboard-tab",
             "onboardDate": "2022-09-20",
             "title": "Team Central Dashboard",
             "shortDescription": "A single dashboard displaying data chats and content from Microsoft Graph to accelerate team collaboration and personal productivity.",
@@ -262,7 +262,7 @@
         },
         {
             "id": "graph-connector-app",
-            "shortId": "gca",
+            "shortId": "graph-connector-tab",
             "onboardDate": "2022-04-18",
             "title": "Graph Connector App",
             "shortDescription": "Showcases how to build custom Graph Connector",
@@ -283,7 +283,7 @@
         },
         {
             "id": "graph-toolkit-one-productivity-hub",
-            "shortId": "gtoph",
+            "shortId": "graph-ttk-hub-tab",
             "onboardDate": "2022-07-27",
             "title": "One Productivity Hub using Graph Toolkit",
             "shortDescription": "Microsoft Teams tab with SSO to view calendar events, to-do tasks and file folders.",
@@ -304,7 +304,7 @@
         },
         {
             "id": "todo-list-with-Azure-backend",
-            "shortId": "tdla",
+            "shortId": "todo-backend",
             "onboardDate": "2021-05-06",
             "title": "Todo List with backend on Azure",
             "shortDescription": "Todo List app with Azure Function backend and Azure SQL database",
@@ -326,7 +326,7 @@
         },
         {
             "id": "share-now",
-            "shortId": "sn",
+            "shortId": "share-now",
             "onboardDate": "2021-05-17",
             "title": "Share Now",
             "shortDescription": "Knowledge sharing app contains a Tab and a Message extension",
@@ -347,7 +347,7 @@
         },
         {
             "id": "hello-world-teams-tab-and-outlook-add-in",
-            "shortId": "hwto",
+            "shortId": "helloworld-outlook",
             "onboardDate": "2023-03-02",
             "title": "Hello World Teams Tab and Outlook add-in",
             "shortDescription": "A hello world project that contains both Teams Tab and Outlook add-in capability",
@@ -366,7 +366,7 @@
         },
         {
             "id": "outlook-add-in-set-signature",
-            "shortId": "oass",
+            "shortId": "signature-outlook-tab",
             "onboardDate": "2023-05-04",
             "title": "Set signature using Outlook add-in",
             "shortDescription": "An Outlook add-in that sets signature for the user",
@@ -385,7 +385,7 @@
         },
         {
             "id": "developer-assist-dashboard",
-            "shortId": "dad",
+            "shortId": "dev-assist-dashboard-tab",
             "onboardDate": "2023-03-07",
             "title": "Developer Assist Dashboard",
             "shortDescription": "A dashboard that integrates with Azure DevOps, Github issues and Planner tasks that accelerates developer productivity.",
@@ -405,7 +405,7 @@
         },
         {
             "id": "live-share-dice-roller",
-            "shortId": "lsdr",
+            "shortId": "dice-roller-tab",
             "onboardDate": "2023-04-27",
             "title": "Dice Roller in meeting",
             "shortDescription": "This sample introduces Microsoft Live Share and Azure Fluid Relay to enable a shared experience between multiple users.",
@@ -426,7 +426,7 @@
         },
         {
             "id": "teams-chef-bot",
-            "shortId": "tcb",
+            "shortId": "chef-bot",
             "onboardDate": "2023-06-25",
             "title": "Teams Chef Bot",
             "shortDescription": "Demonstrates how to build bot with Microsoft Teams AI Library.",
@@ -446,7 +446,7 @@
         },
         {
             "id": "spfx-productivity-dashboard",
-            "shortId": "spd",
+            "shortId": "spfx-dashboard-tab",
             "onboardDate": "2023-08-09",
             "title": "One Productivity Hub using Graph Toolkit with SPFx",
             "shortDescription": "Microsoft Teams tab powered by SharePoint Framework to view calendar events, to-do tasks and file folders.",
