--- a/react-retail-dashboard/env/.env.local
+++ b/react-retail-dashboard/env/.env.local
@@ -1,7 +1,5 @@
 # Built-in environment variables
-TEAMSFX_ENV=dev
+TEAMSFX_ENV=local
 
 # Generated during provision, you can also add your own variables.
 TEAMS_APP_ID=
-
-# Secrets. Keys prefixed with `SECRET_` will be masked in Teams Toolkit logs.
