chore: update yml to catch up with schema updates

--- a/react-retail-dashboard/package.json
+++ b/react-retail-dashboard/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "teamsfx-template-spfx-tab",
+    "name": "react-retail-dashboard",
     "version": "0.0.1",
     "description": "",
     "engines": {
