--- a/react-retail-dashboard/src/package.json
+++ b/react-retail-dashboard/src/package.json
@@ -14,13 +14,13 @@
   },
   "dependencies": {
     "@microsoft/mgt-spfx": "^2.10.0",
-    "@microsoft/sp-adaptive-card-extension-base": "1.17.3",
-    "@microsoft/sp-core-library": "1.17.3",
-    "@microsoft/sp-dialog": "^1.17.3",
-    "@microsoft/sp-lodash-subset": "1.17.3",
-    "@microsoft/sp-office-ui-fabric-core": "1.17.3",
-    "@microsoft/sp-property-pane": "1.17.3",
-    "@microsoft/sp-webpart-base": "1.17.3",
+    "@microsoft/sp-adaptive-card-extension-base": "1.17.4",
+    "@microsoft/sp-core-library": "1.17.4",
+    "@microsoft/sp-dialog": "1.17.4",
+    "@microsoft/sp-lodash-subset": "1.17.4",
+    "@microsoft/sp-office-ui-fabric-core": "1.17.4",
+    "@microsoft/sp-property-pane": "1.17.4",
+    "@microsoft/sp-webpart-base": "1.17.4",
     "@pnp/common": "^2.15.0",
     "@pnp/sp": "^3.15.0",
     "@pnp/spfx-controls-react": "3.13.0",
@@ -30,11 +30,11 @@
     "tslib": "2.3.1"
   },
   "devDependencies": {
-    "@microsoft/eslint-config-spfx": "1.17.3",
-    "@microsoft/eslint-plugin-spfx": "1.17.3",
+    "@microsoft/eslint-config-spfx": "1.17.4",
+    "@microsoft/eslint-plugin-spfx": "1.17.4",
     "@microsoft/rush-stack-compiler-4.5": "0.5.0",
-    "@microsoft/sp-build-web": "1.17.3",
-    "@microsoft/sp-module-interfaces": "1.17.3",
+    "@microsoft/sp-build-web": "1.17.4",
+    "@microsoft/sp-module-interfaces": "1.17.4",
     "@rushstack/eslint-config": "2.5.1",
     "@types/react": "17.0.45",
     "@types/react-dom": "17.0.17",
