ci: update code owner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -38,5 +38,6 @@
 /whos-next-meeting-app @MSFT-yiz @HuihuiWu-Microsoft
 /teams-chef-bot @MSFT-yiz @HuihuiWu-Microsoft
 /spfx-productivity-dashboard @MSFT-yiz @HuihuiWu-Microsoft
+/react-retail-dashboard @MSFT-yiz @HuihuiWu-Microsoft
 /.config/samples-config-v3.json @HuihuiWu-Microsoft @wenytang-ms @tecton
 /.github/workflows/cd.yml @adashen @LongOddCode @Siglud @qinezh @wenytang-ms
